# llm-cli

./: .cspell.json  .ruff.toml  CHANGELOG.md  README.md  pyproject.toml
docs/: help.md
docs/config/: litellm.env  models.toml
docs/schema/: config.json  models.json
scripts/: gen-help.sh  gen-schema.py
src/llm_cli/: __init__.pyi
src/llm_cli/assets/instructions/: description.md  topics.md
src/llm_cli/assets/prompts/: commit.md
src/llm_cli/cmd/: __init__.pyi  _app.py
src/llm_cli/cmd/commit/: _app.py  _main.py
src/llm_cli/cmd/repo/: _app.py  _main.py
src/llm_cli/cmd/repo/description/: _app.py  _main.py
src/llm_cli/cmd/repo/topics/: _app.py  _main.py
src/llm_cli/config/: __init__.pyi  _config.py  _get_config.py  _init_litellm.py  _router_config.py
src/llm_cli/interactive/: __init__.pyi  _output.py  _pretty_usage.py
src/llm_cli/llm/: __init__.pyi
src/llm_cli/llm/_config/: __init__.pyi  _config.py
src/llm_cli/llm/_config/_provider/: __init__.pyi  _abc.py  _deepseek.py  _main.py
src/llm_cli/llm/_gen/: __init__.pyi  _output.py
src/llm_cli/logging/: _fix_litellm.py  _init.py  _loguru.py
src/llm_cli/utils/: __init__.pyi  _extract_between_tags.py  _get_config.py  _get_prompt.py  _repomix.py  _run.py
src/llm_cli/utils/git/: _root.py
